web_static/styles/5-filters.css
.filters {
	display: flex;
	justify-content: flex-end;
	align-items: center;
	background-color: white;
	height: 70px;
	width: 100%;
	border: 1px solid #DDDDDD;
}

button {
	font-size: 18px;
	background-color: #FF5A5F;
	color: #FFFFFF;
	height: 48px;
	width: 20%;
	border-radius: 4px;
	margin-right: 30px;
}

button:hover {
	 opacity: 90%;
}

.locations {
	height: 100%;
	width: 25%;
	border-right: 1px solid #DDDDDD;
}

.amenities {
	height: 100%;
	width: 25%;
}

h3 {
	font-weight: 600;
}

h4 {
	font-weight: 400;
	font-size: 14px;
}

